syntax = "proto3";
package liubaninc.m0.utxo;

import "utxo/input.proto";

option go_package = "github.com/liubaninc/m0/x/utxo/types";

// Msg defines the Msg service.
service Msg {
  rpc Issue(MsgIssue) returns (MsgIssueResponse);
  rpc Send(MsgSend) returns (MsgSendResponse);
  rpc Destroy(MsgDestroy) returns (MsgDestroyResponse);
}

message MsgIssue {
  string creator = 1;
  string desc = 2;

  repeated Input inputs = 10;
  repeated Output outputs = 11;
}

message MsgIssueResponse {
}

message MsgSend {
  string creator = 1;
  string desc = 2;

  repeated Input inputs = 10;
  repeated Output outputs = 11;
}

message MsgSendResponse {
}

message MsgDestroy {
  string creator = 1;
  string desc = 2;

  repeated Input inputs = 10;
  repeated Output outputs = 11;
}

message MsgDestroyResponse {
}

